ncc/testsuite/negative/fail-cyclic-tyalias.n
type t = t -> t;  // E: cyclic tyalias
